fix(kernel-tuning): add the directoryASa